<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SkillActivity">

    <ImageView
        android:id="@+id/skillBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/skill_background_descr"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beginnerballerbg" />

    <ImageView
        android:id="@+id/welcomeLogo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitCenter"
        android:src="@drawable/swooshlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skillBackground"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/leagueCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/skill_caption"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLogo" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leagueCaption">

        <ToggleButton
            android:id="@+id/beginnerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onBeginnerClick"
            android:text="@string/beginner"
            android:textColor="@android:color/white"
            android:textOff="@string/beginner"
            android:textOn="@string/beginner" />

        <ToggleButton
            android:id="@+id/ballerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onBallerClick"
            android:text="@string/baller"
            android:textColor="@android:color/white"
            android:textOff="@string/baller"
            android:textOn="@string/baller" />
    </LinearLayout>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/montserrat"
        android:onClick="onFinishClick"
        android:text="@string/finish"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/skillBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>