<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.FinishActivity">

    <ImageView
        android:id="@+id/searchBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exercisebg"
        android:contentDescription="@string/finish_background_descr" />

    <ImageView
        android:id="@+id/welcomeLogo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/swooshlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchBackground" />

    <TextView
        android:id="@+id/searchLeaguesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/search_leagues_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/searchBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLogo"
        app:layout_constraintVertical_bias="0.35" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLeaguesText" />

</androidx.constraintlayout.widget.ConstraintLayout>